; ModuleID = '/home/carl/AnghaBench/linux/net/openvswitch/extr_flow_table.c_ovs_flow_cmp.c'
source_filename = "/home/carl/AnghaBench/linux/net/openvswitch/extr_flow_table.c_ovs_flow_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sw_flow = type { i32 }
%struct.sw_flow_match = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ovs_flow_cmp(%struct.sw_flow* %0, %struct.sw_flow_match* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sw_flow*, align 8
  %5 = alloca %struct.sw_flow_match*, align 8
  store %struct.sw_flow* %0, %struct.sw_flow** %4, align 8
  store %struct.sw_flow_match* %1, %struct.sw_flow_match** %5, align 8
  %6 = load %struct.sw_flow*, %struct.sw_flow** %4, align 8
  %7 = getelementptr inbounds %struct.sw_flow, %struct.sw_flow* %6, i32 0, i32 0
  %8 = call i64 @ovs_identifier_is_ufid(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load %struct.sw_flow*, %struct.sw_flow** %4, align 8
  %12 = load %struct.sw_flow_match*, %struct.sw_flow_match** %5, align 8
  %13 = getelementptr inbounds %struct.sw_flow_match, %struct.sw_flow_match* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.sw_flow_match*, %struct.sw_flow_match** %5, align 8
  %16 = getelementptr inbounds %struct.sw_flow_match, %struct.sw_flow_match* %15, i32 0, i32 0
  %17 = call i32 @flow_cmp_masked_key(%struct.sw_flow* %11, i32 %14, i32* %16)
  store i32 %17, i32* %3, align 4
  br label %22

18:                                               ; preds = %2
  %19 = load %struct.sw_flow*, %struct.sw_flow** %4, align 8
  %20 = load %struct.sw_flow_match*, %struct.sw_flow_match** %5, align 8
  %21 = call i32 @ovs_flow_cmp_unmasked_key(%struct.sw_flow* %19, %struct.sw_flow_match* %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %18, %10
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @ovs_identifier_is_ufid(i32*) #1

declare dso_local i32 @flow_cmp_masked_key(%struct.sw_flow*, i32, i32*) #1

declare dso_local i32 @ovs_flow_cmp_unmasked_key(%struct.sw_flow*, %struct.sw_flow_match*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
